[gd_scene load_steps=6 format=2]

[ext_resource path="res://LoadIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Host.gd" type="Script" id=2]
[ext_resource path="res://Main.tscn" type="PackedScene" id=3]
[ext_resource path="res://Credits.tscn" type="PackedScene" id=4]
[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=5]

[node name="Host" type="Node2D"]
script = ExtResource( 2 )
next_level = ExtResource( 3 )

[node name="Credits" parent="." instance=ExtResource( 4 )]

[node name="MainMenu" parent="." instance=ExtResource( 5 )]

[node name="LoadIn" parent="." instance=ExtResource( 1 )]

[connection signal="back" from="Credits" to="." method="_on_Credits_back"]
[connection signal="credits" from="MainMenu" to="." method="_on_MainMenu_credits"]
[connection signal="quit" from="MainMenu" to="." method="_on_MainMenu_quit"]
[connection signal="start" from="MainMenu" to="." method="_on_MainMenu_start"]
[connection signal="done" from="LoadIn" to="." method="_on_LoadIn_done"]
